fix: header misalignment AGAIN

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -30,12 +30,20 @@
     padding: 16px 0;
   }
 }
+@media screen and (min-width: 626px) and (max-width: 1050px) {
+  .header__container {
+    padding-top: 14px;
+    padding-bottom: 12px;
+  }
+}
 .header__logo {
   font-size: 20px;
   font-family: "Roboto Slab", Inter, sans-serif;
   font-weight: 700;
   line-height: 24px;
   color: inherit;
+  padding: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 626px) {
@@ -59,12 +67,6 @@
     transform: translateY(0) scale(1);
   }
 }
-
-/* .header__icon-slot {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-} */
 
 .header--transparent .navigation__username {
   color: #fff;
